<resources>
    <string name="app_name">360 News</string>


    <string name="select_profile_image">Select Profile Image</string>
    <string name="messageLoading">Loading</string>

    <string name="nav_host">Nav Host</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_acc">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="login_title">News Login</string>
    <string name="login_fail">Authentication Failed</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="both">See Both Sides</string>
    <string name="view_history">View History</string>
    <string name="fell">No Results</string>
    <string name="no">No Articles Found</string>
    <string name="save_can">Save Cancelled</string>
    <string name="save_art">Confirm Save</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="list_title">360 News</string>
    <string name="filter">Filter</string>
    <string name="shuffle">Shuffle</string>
    <string name="home">Home</string>
    <string name="your_feed">Your Feed</string>
    <string name="liked_articles">Saved Articles</string>
    <string name="saved_article">Added to Saved Articles</string>
    <string name="articles">Articles</string>
    <string name="outlets">Outlets</string>
    <string name="timcast">Timcast</string>
    <string name="bongino">Bongino Report</string>
    <string name="zerohedge">Zerohedge</string>
    <string name="gbnews">GB News</string>
    <string name="spiked">Spiked</string>
    <string name="breitbart">Breitbart</string>
    <string name="dailycaller">The Daily Caller</string>
    <string name="beast">The Daily Beast</string>
    <string name="gript">Gript</string>
    <string name="blaze">Blaze</string>
    <string name="rte">RTE</string>
    <string name="yah">Yahoo News</string>
    <string name="glo">Global News</string>
    <string name="sky">Sky News</string>
    <string name="huff">Huffington Post</string>
    <string name="gateway">The Gateway Pundit</string>
    <string name="pmill">The Post Millennial</string>
    <string name="politico">Politico</string>
    <string name="cbs">CBS</string>
    <string name="gua">The Guardian</string>
    <string name="arr_right">Right</string>
    <string name="arr_left">Left</string>
    <string name="abc">ABC</string>
    <string name="vox">Vox</string>
    <string name="euron">Euronews</string>
    <string name="amthink">American Thinker</string>
    <string name="infow">Infowars</string>
    <string name="dmail">The Daily Mail</string>
    <string name="npr">NPR</string>
    <string name="sceptic">Daily Sceptic</string>
    <string name="trending">Trending Politics</string>
    <string name="hill">The Hill</string>
    <string name="rev">Revolver News</string>
    <string name="left">Leans Left</string>
    <string name="right">Leans Right</string>
    <string name="your">Your Articles</string>
    <string name="promoted">Ad</string>
    <string name="us">US</string>
    <string name="eu">EU</string>
    <string name="ie">IE</string>
    <string name="gb">GB</string>
    <string name="can">CA</string>
    <string name="canadian">Canadian</string>
    <string name="irish">Irish</string>
    <string name="american">American</string>
    <string name="british">British</string>
    <string name="european">European</string>
    <string name="action_settings">Settings</string>
    <string name="theme">Switch Theme</string>

</resources>