<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/storyListFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/list_title" />
    </group>
    <item android:title="@string/history">
        <menu>
            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/liked_articles" />
        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_launcher_foreground"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>