<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:weightSum="4">

    <Button
        android:id="@+id/emailCreateAccountButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/create_acc"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/emailSignInButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/sign_in"
        android:textColor="@color/orange"
        android:theme="@style/Theme.News"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/orange"
        android:gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailSignInButton"
        app:layout_constraintEnd_toStartOf="@+id/fieldPassword"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:backgroundTint="@color/orange"
        android:gravity="center_horizontal"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFAFA"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="316dp"
        android:layout_height="260dp"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

</androidx.constraintlayout.widget.ConstraintLayout>
